--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,3 +10,15 @@
     text-decoration-color: #ffda00;
     text-decoration-thickness: 0.3rem;
 }
+
+input[type="range"]::-webkit-slider-thumb {
+    width: 15px;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 15px;
+    cursor: ew-resize;
+    background: #FFF;
+    box-shadow: -405px 0 0 400px darkgrey;
+    border-radius: 50%;
+
+}
